--- a/endscreen.properties
+++ b/endscreen.properties
@@ -3,5 +3,5 @@
 youtubestudiourl= https://studio.youtube.com/channel/UCJfQDCwewGd2gU2fLCpeiAQ
 endscreentocopy= A Rare Immaculate Inning
 [machine_settings]
-userdatadir= C:\Users\Ryan\AppData\Local\Google\Chrome\User Data
-chromebinarypath= C:\Program Files (x86)\Google\Chrome\Application\chrome.exe
+userdatadir= C:\Users\StemS\AppData\Local\Google\Chrome\User Data
+chromebinarypath= C:\Program Files\Google\Chrome\Application\chrome.exe
